# textec

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  retro.md
.github/workflows/: ci.yaml  pylint.yml
src/: app.py  bib_generator.py  db_helper.py  references.bib  util.py
src/entities/: citation.py  reference.py  todo.py
src/repositories/: reference_repository.py  todo_repository.py
src/static/: bootstrap.min.css  stylesheet.css
src/story_tests/: add_reference.robot  bibtex_generation.robot  delete_reference.robot  edit_reference.robot  list_references.robot  optional_field.robot  references.robot  resource.robot  search_reference.robot  vars.py
src/templates/: edit.html  index.html  layout.html  new.html  new_todo.html
src/tests/: test_bib_generator.py  test_delete_reference.py  test_edit_reference.py  test_generate_tag.py  test_reference_repository.py  test_search_reference.py  test_validate_reference.py
